--- a/views/side/user/dangky.ejs
+++ b/views/side/user/dangky.ejs
@@ -37,7 +37,7 @@
         </div>
         <div class="form-group col-md-6" >
           <label for="inputPhone">Phone</label>
-          <input type="text" name="phone"  class=" form-control input-medium bfh-phone"  id="inputPhone"  data-format="+84 (ddd) ddd-dddd" data-country="US">
+          <input type="text" name="phone"  class=" form-control input-medium bfh-phone"  id="inputPhone"  data-format="+84 (ddd) ddd-dddd">
         </div>
       </div>
       <div class=" row form-row" style="margin: 0px">
