--- a/views/side/user/dangky.ejs
+++ b/views/side/user/dangky.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
+    <title>Dang Ky</title>
     <% include ../header.ejs%>
     <link rel="stylesheet" href="/stylesheets/side/user/dangky.css">
     <script src="/javascripts/jquery.validate.min.js"></script>
+    <script src="/javascripts/side/dangky.js"></script>
 </head>
 <body>
 <% include ../menu.ejs%>
@@ -187,5 +189,4 @@
   </div>
 </div>
 
-<script src="/javascripts/side/dangky.js">
 <% include ../footer.ejs%>
