--- a/views/side/footer.ejs
+++ b/views/side/footer.ejs
@@ -9,7 +9,7 @@
         </div>
       </small>
     </div>
-    <div class="col-lg-4">
+    <div class="col-lg-4 text-right">
       <small>
         <ul class=" list-inline">
           <!-- <li><a href="/content/certicom/en.html" id="footer-home">Home</a></li> -->
