--- a/views/side/user/header.ejs
+++ b/views/side/user/header.ejs
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<link rel="shortcut icon" href="/logo-icon.png">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="../../javascripts/bootstrap/css/bootstrap-theme.min.css">
+<script src="../../javascripts/jquery.min.js"></script>
+<script src="../../javascripts/bootstrap/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="../../javascripts/bootstrap/css/bootstrap.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="../../javascripts/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="/stylesheets/side/user/user.css">
+<link rel="stylesheet" href="/stylesheets/side/footer.css">
+<link rel="stylesheet" href="/stylesheets/side/user/edit.css">
+<script src="/javascripts/side/home.js"></script>
