--- a/views/side/user/login.ejs
+++ b/views/side/user/login.ejs
@@ -30,7 +30,7 @@
     <h6 style="margin: 15px">
       <i><i style="color: red">*</i> Items in <strong>bold</strong> are required fields.</i>
     </h6>
-    <form action="" method="post" id="form-post"  autocomplete = 'on'>
+    <form action="" method="post" id="form-post"  >
       <div class=" row form-row" style="margin: 0px" >
         <div class="form-group col-md-12" >
           <label for="inputEmail">Email</label>
