--- a/views/side/user/home.ejs
+++ b/views/side/user/home.ejs
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Home</title>
+    <% include header.ejs%>
+</head>
+<body >
+<% include ../menu.ejs%>
+
+<div class="container content">
+  <div class="row">
+    <%include menudoc.ejs%>
+    <div class="col-sm-9 col-md-9 infor">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Thông tin người dùng.</h3>
+        </div>
+        <div class="panel-body" style="margin: 15px 0px;">
+          <div class="">
+
+            <h5 style="margin-top: 0px"> Chi tiết</h5>
+            <table class="table">
+              <tbody>
+              <%for (var property in data) {%>
+              <tr>
+                <td><%= property%></td>
+                <td>
+                    <%= data[property] %>
+                </td>
+              </tr>
+              <%}%>
+              </tbody>
+            </table>
+          </div>
+          <div class="form-group">
+            <div class="form-check">
+            </div>
+            <a type="submit" class="btn btn-primary" href="edit">Edit</a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<footer>
+    <% include ../footer.ejs%>
+</footer>
+
+</body>
 </html>
