--- a/views/side/menu.ejs
+++ b/views/side/menu.ejs
@@ -3,7 +3,7 @@
     <div class="row sub-menu">
       <div class="col-lg-8 icon-logo">
         <a href="#" >
-          <img src="../images/Home/certicom-logo-hi.png">
+          <img src="http://localhost:3000/images/Home/certicom-logo-hi.png">
         </a>
       </div>
       <div class="col-lg-4 sreach-menu">
@@ -130,7 +130,7 @@
     <div class="row ">
       <div class="col-lg-8 icon-logo">
         <a href="#" >
-          <img src="../images/Panner/certicom-logo-hi-white.png">
+          <img src="http://localhost:3000/images/Panner/certicom-logo-hi-white.png">
         </a>
       </div>
       <div class="col-lg-4 sreach-menu">
