--- a/views/side/user/donhang.ejs
+++ b/views/side/user/donhang.ejs
@@ -71,8 +71,10 @@
 </footer>
 
 <script>
-      $('.list-group a').removeClass( "active " )
+      $('.list-group a').removeClass( "active" )
+      $('.panel-collapse').removeClass( "in " )
       $('.donhang').addClass( "active" );
+      $('.thongtin').addClass("in");
 </script>
 
 </body>
