--- a/views/side/user/home.ejs
+++ b/views/side/user/home.ejs
@@ -49,5 +49,12 @@
     <% include ../footer.ejs%>
 </footer>
 
+<script>
+    $('.list-group a').removeClass( "active" )
+    $('.panel-collapse').removeClass( "in " )
+    $('.tt').addClass( "active" );
+    $('.thongtin').addClass("in");
+</script>
+
 </body>
 </html>
