--- a/public/stylesheets/side/user/user.css
+++ b/public/stylesheets/side/user/user.css
@@ -20,12 +20,13 @@ html {
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 body {
-    padding: 50px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 50px 0px;
+    font: 14px "Lucida Grande", 'Open Sans', Helvetica, Arial, sans-serif;
     font-family: 'Open Sans', 'sans-serif';
     position: relative;
     min-height: 100%;
 }
+
 .mega-dropdown {
     position: static !important;
 }
