--- a/views/side/user/menudoc.ejs
+++ b/views/side/user/menudoc.ejs
@@ -9,13 +9,13 @@
           </a>
         </h4>
       </div>
-      <div id="collapseOne" class="panel-collapse collapse in">
+      <div id="collapseOne" class="panel-collapse collapse thongtin">
         <div class="list-group">
-          <a href="home" class="list-group-item thongtin active">
+          <a href="home" class="list-group-item tt ">
             Thông tin
           </a>
           <a href="donhang" class="list-group-item donhang">Đơn hàng</a>
-          <a href="#" class="list-group-item">Đổi mật khẩu</a>
+          <a href="doimatkhau" class="list-group-item doimk">Đổi mật khẩu</a>
         </div>
       </div>
     </div>
@@ -28,23 +28,25 @@
           </a>
         </h4>
       </div>
-      <div id="collapseFour" class="panel-collapse collapse">
+      <div id="collapseFour" class="panel-collapse collapse danhsach in">
         <div class="list-group">
-          <a href="#" class="list-group-item active">
+          <a href="cert/dangky" class="list-group-item cert active">
             Tạo chứng chỉ số
           </a>
-          <a href="#" class="list-group-item">CA</a>
-          <a href="#" class="list-group-item">Chữ ký số</a>
-          <a href="#" class="list-group-item">Verify chữ ký</a>
-          <a href="#" class="list-group-item">Private Key</a>
+          <a href="CA" class="list-group-item ca">CA</a>
+          <a href="chukyso" class="list-group-item cks">Chữ ký số</a>
+          <a href="verifychuky" class="list-group-item verify">Verify chữ ký</a>
+          <a href="privatekey" class="list-group-item prk">Private Key</a>
         </div>
       </div>
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive"><span class="glyphicon glyphicon-heart">
-                             </span>Phản hồi</a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+            <span class="glyphicon glyphicon-heart"></span>
+            Phản hồi
+          </a>
         </h4>
       </div>
       <div id="collapseFive" class="panel-collapse collapse">
