--- a/views/side/user/menudoc.ejs
+++ b/views/side/user/menudoc.ejs
@@ -11,11 +11,11 @@
       </div>
       <div id="collapseOne" class="panel-collapse collapse thongtin">
         <div class="list-group">
-          <a href="home" class="list-group-item tt ">
+          <a href="/user/home" class="list-group-item tt ">
             Thông tin
           </a>
-          <a href="donhang" class="list-group-item donhang">Đơn hàng</a>
-          <a href="doimatkhau" class="list-group-item doimk">Đổi mật khẩu</a>
+          <a href="/user/donhang" class="list-group-item donhang">Đơn hàng</a>
+          <a href="/user/doimatkhau" class="list-group-item doimk">Đổi mật khẩu</a>
         </div>
       </div>
     </div>
@@ -30,7 +30,7 @@
       </div>
       <div id="collapseFour" class="panel-collapse collapse danhsach in">
         <div class="list-group">
-          <a href="cert/dangky" class="list-group-item cert active">
+          <a href="/user/cert/dangky" class="list-group-item cert active">
             Tạo chứng chỉ số
           </a>
           <a href="CA" class="list-group-item ca">CA</a>
