--- a/views/side/header.ejs
+++ b/views/side/header.ejs
@@ -1,14 +1,14 @@
 <meta charset="UTF-8">
 <link rel="shortcut icon" href="/logo-icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="../javascripts/bootstrap/css/bootstrap-theme.min.css">
-<script src="../javascripts/jquery.min.js"></script>
-<script src="../javascripts/bootstrap/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="../javascripts/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="http://localhost:3000/javascripts/bootstrap/css/bootstrap-theme.min.css">
+<script src="http://localhost:3000/javascripts/jquery.min.js"></script>
+<script src="http://localhost:3000/javascripts/bootstrap/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="http://localhost:3000/javascripts/bootstrap/css/bootstrap.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../javascripts/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="http://localhost:3000/javascripts/font-awesome/css/font-awesome.min.css">
 
-<script src="/javascripts/side/home.js"></script>
-<link  rel="stylesheet" href="/stylesheets/side/footer.css" ></link>
-<link  rel="stylesheet" href="/stylesheets/side/header.css" ></link>
-<link rel="stylesheet" href="/javascripts/bootrap-form-helper/css/bootstrap-formhelpers.min.css"></link>
+<script src="http://localhost:3000/javascripts/side/home.js"></script>
+<link  rel="stylesheet" href="http://localhost:3000/stylesheets/side/footer.css" ></link>
+<link  rel="stylesheet" href="http://localhost:3000/stylesheets/side/header.css" ></link>
+<link rel="stylesheet" href="http://localhost:3000/javascripts/bootrap-form-helper/css/bootstrap-formhelpers.min.css"></link>
