--- a/views/side/menu.ejs
+++ b/views/side/menu.ejs
@@ -29,30 +29,25 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" style="">My Store</a>
+            <a class="navbar-brand" href="#" style="">Home</a>
           </div>
 
           <div class="collapse navbar-collapse js-navbar-collapse">
             <ul class="nav navbar-nav">
               <li class="dropdown mega-dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Men <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Company<span class="caret"></span></a>
                 <ul class="dropdown-menu mega-dropdown-menu" >
                   <li class="col-sm-3">
                     <ul>
-                      <li class="dropdown-header">Features</li>
-                      <li><a href="#">Auto Carousel</a></li>
-                      <li><a href="#">Carousel Control</a></li>
-                      <li><a href="#">Left & Right Navigation</a></li>
-                      <li><a href="#">Four Columns Grid</a></li>
-                      <li class="divider"></li>
-                      <li class="dropdown-header">Fonts</li>
-                      <li><a href="#">Glyphicon</a></li>
-                      <li><a href="#">Google Fonts</a></li>
+
+                      <li class="dropdown-header">ABOUT</li>
+                      <li><a href="#">Giới thiệu công ty</a></li>
+                      <li><a href="#">Công nghệ</a></li>
                     </ul>
                   </li>
                   <li class="col-sm-3">
                     <ul>
-                      <li class="dropdown-header">Plus</li>
+                      <li class="dropdown-header">News Releases</li>
                       <li><a href="#">Navbar Inverse</a></li>
                       <li><a href="#">Pull Right Elements</a></li>
                       <li><a href="#">Coloured Headers</a></li>
@@ -61,7 +56,7 @@
                   </li>
                   <li class="col-sm-3">
                     <ul>
-                      <li class="dropdown-header">Much more</li>
+                      <li class="dropdown-header">Articles</li>
                       <li><a href="#">Easy to Customize</a></li>
                       <li><a href="#">Calls to action</a></li>
                       <li><a href="#">Custom Fonts</a></li>
@@ -71,50 +66,50 @@
                 </ul>
               </li>
               <li class="dropdown mega-dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Women <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Product & Service<span class="caret"></span></a>
                 <ul class="dropdown-menu mega-dropdown-menu">
                   <li class="col-sm-3">
                     <ul>
                       <li class="dropdown-header">Features</li>
-                      <li><a href="#">Auto Carousel</a></li>
-                      <li><a href="#">Carousel Control</a></li>
-                      <li><a href="#">Left & Right Navigation</a></li>
-                      <li><a href="#">Four Columns Grid</a></li>
+                      <li><a href="#"> MANAGED CERTIFICATE SERVICE</a></li>
+                      <li><a href="#">ASSET MANAGEMENT SYSTEM</a></li>
+                      <li><a href="#">ADVANCED METERING INFRASTRUCTURE</a></li>
                       <li class="divider"></li>
-                      <li class="dropdown-header">Fonts</li>
-                      <li><a href="#">Glyphicon</a></li>
-                      <li><a href="#">Google Fonts</a></li>
                     </ul>
                   </li>
                   <li class="col-sm-3">
                     <ul>
                       <li class="dropdown-header">Plus</li>
-                      <li><a href="#">Navbar Inverse</a></li>
-                      <li><a href="#">Pull Right Elements</a></li>
+                      <li><a href="#">CERTICOM PROFESSIONAL SERVICES</a></li>
+                      <li><a href="#">Custom Security Solutions</a></li>
                       <li><a href="#">Coloured Headers</a></li>
-                      <li><a href="#">Primary Buttons & Default</a></li>
-                    </ul>
-                  </li>
-                  <li class="col-sm-3">
-                    <ul>
-                      <li class="dropdown-header">Much more</li>
-                      <li><a href="#">Easy to Customize</a></li>
-                      <li><a href="#">Calls to action</a></li>
-                      <li><a href="#">Custom Fonts</a></li>
-                      <li><a href="#">Slide down on Hover</a></li>
+                      <li><a href="#">Consulting Services</a></li>
                     </ul>
                   </li>
                 </ul>
               </li>
-              <li><a href="#">Store locator</a></li>
+              <li class="dropdown mega-dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> USE CASE<span class="caret"></span></a>
+                <ul class="dropdown-menu mega-dropdown-menu">
+                  <li class="col-sm-3">
+                    <ul>
+                      <li class="dropdown-header">USE CASES</li>
+                      <li><a href="#"> XM Radio Success Story</a></li>
+                      <li><a href="#">Check 21 Solutions from Certicom</a></li>
+                      <li><a href="#">Certicom Security for RFID Authentication</a></li>
+                      <li class="divider"></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" style="margin-right: 15px;" data-toggle="dropdown" role="button" aria-expanded="false">My account <span class="caret"></span></a>
 
                 <ul class="dropdown-menu" role="menu" style="margin-right: 15px;">
-                  <li><a href="#">Sign in</a></li>
-                  <li><a href="#">Sign Up</a></li>
+                  <li><a href="/user/login">Sign in</a></li>
+                  <li><a href="/user/dangky">Sign Up</a></li>
                   <li><a href="#">Forget account</a></li>
                   <li class="divider"></li>
                   <li><a href="#">Support</a></li>
