--- a/views/side/user/menudoc.ejs
+++ b/views/side/user/menudoc.ejs
@@ -15,7 +15,7 @@
             Thông tin
           </a>
           <a href="/user/donhang" class="list-group-item donhang">Đơn hàng</a>
-          <a href="/user/doimatkhau" class="list-group-item doimk">Đổi mật khẩu</a>
+          <a href="/user/edit/password" class="list-group-item doimk">Đổi mật khẩu</a>
         </div>
       </div>
     </div>
