--- a/views/side/user/private_key.ejs
+++ b/views/side/user/private_key.ejs
@@ -31,7 +31,7 @@
   </STYLE>
 </head>
 <body >
-<% include ../menu.ejs%>
+<% include menu.ejs%>
 
 <div class="container content">
   <div class="row">
