add cert detail

--- a/views/side/user/private_key.ejs
+++ b/views/side/user/private_key.ejs
@@ -85,7 +85,7 @@
                 <div>
                   <label for="r">Key</label>
                   <textarea class="form-control clipboard-copy-target" id="Key" name="Key" cols="100" rows="8"></textarea>
-                  <a type="button" download="Key.txt" class="clipboard-copy-button" id="save_button1" title="Click me to Save." data-clipboard-target="private_key"><i class="fa fa-save fa-fw"></i></a>
+                  <a type="button" download="privateKey.txt" class="clipboard-copy-button" id="save_button1" title="Click me to Save." data-clipboard-target="private_key"><i class="fa fa-save fa-fw"></i></a>
                 </div>
               </div>
 
